--- a/preamble.tex
+++ b/preamble.tex
@@ -185,6 +185,9 @@
 \renewcommand*{\hash}{\mathbb{H}}
 \newcommand*{\N}{\mathbb{N}}
 \newcommand*{\G}{\mathbb{G}}
+\newcommand*{\defxfer}{\mathbb{T}}
+\newcommand*{\defxfers}{\seq\defxfer}
+\newcommand*{\partialstate}{\mathbb{U}}
 \newcommand*{\blob}{\mathbb{Y}}
 \newcommand*{\Z}{\mathbb{Z}}
 
@@ -300,6 +303,14 @@
 \newcommand*{\sa¬octets}{o}
 \newcommand*{\sa¬minbalance}{f}
 
+% Derived fields of validator keys.
+\newcommand*{\valkey}{\mathbb{K}}
+\newcommand*{\vk¬bs}{b}
+\newcommand*{\vk¬ed}{e}
+\newcommand*{\vk¬bls}{BLS}
+\newcommand*{\vk¬metadata}{m}
+\newcommand*{\allvalkeys}{\seq{\valkey}_{\valcount}}
+
 % Blocks.
 \newcommand*{\block}{\mathbf{B}}
 \newcommand*{\theblock}{\block}
@@ -341,18 +352,6 @@
 % Derived fields
 \newcommand*{\¬authorbskey}{a}
 
-% Derived fields of validator keys.
-\newcommand*{\valkey}{\mathbb{K}}
-\newcommand*{\vk¬bs}{b}
-\newcommand*{\vk¬ed}{e}
-\newcommand*{\vk¬bls}{BLS}
-\newcommand*{\vk¬metadata}{m}
-\newcommand*{\allvalkeys}{\seq{\valkey}_{\valcount}}
-
-\newcommand*{\partialstate}{\mathbb{U}}
-\newcommand*{\defxfer}{\mathbb{T}}
-\newcommand*{\defxfers}{\seq{\defxfer}}
-
 \newcommand*{\thestate}{\sigma}
 \newcommand*{\genesisstate}{\sigma^0}
 \newcommand*{\merklizestate}{\mathcal{M}_\sigma}
@@ -365,6 +364,7 @@
 \newcommand*{\delegator}{\privileges_v}
 \newcommand*{\assigners}{\privileges_\mathbf{a}}
 \newcommand*{\alwaysaccers}{\privileges_\mathbf{g}}
+
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\vartheta}
 \newcommand*{\lastaccout}{\theta}
@@ -372,10 +372,11 @@
 \newcommand*{\recenthistory}{\beta_H}
 \newcommand*{\beefybelt}{\beta_B}
 
-\newcommand*{\goodset}{\psi_\mathbf{g}}
-\newcommand*{\badset}{\psi_\mathbf{b}}
-\newcommand*{\wonkyset}{\psi_\mathbf{w}}
-\newcommand*{\offenders}{\psi_\mathbf{o}}
+\newcommand*{\disputes}{\psi}
+\newcommand*{\goodset}{\disputes_\mathbf{g}}
+\newcommand*{\badset}{\disputes_\mathbf{b}}
+\newcommand*{\wonkyset}{\disputes_\mathbf{w}}
+\newcommand*{\offenders}{\disputes_\mathbf{o}}
 
 % Safrole state.
 \newcommand*{\safrole}{\gamma}
