--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -225,7 +225,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\thestate$] The $\thestate$verall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
   \item[$\thetime$] The most recent block's $\thetime$imeslot. %	τ
   \item[$\varphi$] The authorization queue. %	ϕ
-  \item[$\psi$] Past judgments on work-reports and validators. %	ψ
+  \item[$\disputes$] Past judgments on work-reports and validators. %	ψ
   \begin{description}
     \item[$\badset$] Work-reports judged to be incorrect.
     \item[$\goodset$] Work-reports judged to be correct.
